<resources>
    <string name="app_name">Your App Name</string>
    <string name="my_tasks">Todo list</string>
    <string name="add_todo_description">Add something to do</string>
    <string name="close_button">Close button</string>
    <string name="priority_label">Priority of the task</string>
    <string name="save">SAVE</string>
    <string name="description_hint">Description</string>
    <string name="do_before">Do before</string>
    <string name="delete_button">Delete</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="todo_text">Todo Text</string>
    <string name="importance_low">Low</string>
    <string name="importance_normal">Normal</string>
    <string name="importance_high">High</string>
    <string-array name="priority_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>
