<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/close_button"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_close" />

            <Button
                android:id="@+id/btn_Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="?attr/selectableItemBackground"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/save" />

        </androidx.appcompat.widget.Toolbar>

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:minHeight="48dp"
            android:autofillHints="description"
            android:inputType="text"/>


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="96dp"
            android:minHeight="48dp"
            android:text="@string/do_before" />

        <TextView
            android:id="@+id/deadlineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/priority_label"
            android:textColor="@android:color/darker_gray" />

        <Spinner
            android:id="@+id/spinnerImportance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/importance_array"
            android:minHeight="48dp" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/delete_button"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="0dp"
            android:src="@drawable/delete_icon" />

    </LinearLayout>
</ScrollView>
